# dayframe

./: .env.example  .gitignore  AGENT_1.md  AGENT_1_PROMPT.md  AGENT_2.md  AGENT_2_PROMPT.md  DEPLOYMENT.md  IMPLEMENTATION_ORDER.md  README.md  SPEC.md  TECHNICAL_FOUNDATION.md  docker-compose.yml  openapi.yaml  package.json  playwright.config.ts
model/: .gitignore  labeling_guidelines.md  pyproject.toml  requirements.txt
model/data/: dataset_manifest.json
model/schemas/: EnrichedDayContext.schema.json  shared.schema.json
model/scripts/: check_serving.py  generate_dataset.py  run_eval.py  run_model_eval.py  run_training.py
model/src/dayframe_model/: __init__.py  schema_validator.py
model/src/dayframe_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model/src/dayframe_model/dataset/: anonymization.py  curate.py  enrich.py  export.py  personas.py  synthetic_days.py  targets.py
model/src/dayframe_model/eval/: compliance_eval.py  leakage_eval.py  report.py  run_eval.py  run_model_eval.py  schema_eval.py
model/src/dayframe_model/serving/: deploy.sh  health_check.py  vllm_config.py
model/src/dayframe_model/training/: config.py  formatting.py  (+2 more)
model/tests/: conftest.py  test_anonymization.py  test_compliance_eval.py  test_config.py  test_curate.py  test_dataset_build.py  test_enrich.py  test_export.py  test_export_adapter.py  test_formatting.py  test_leakage_eval.py  test_personas.py  test_report.py  test_schema_eval.py  test_schema_staleness.py  test_schema_validator.py  test_synthetic_days.py  test_targets.py  test_training_formatting.py
(+46 files in other folders)
