[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dayframe-model"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20.0",
    "referencing>=0.31.0",
]

[project.optional-dependencies]
dataset = [
    "google-genai>=1.0.0",
]
train = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "datasets>=2.16.0",
    "trl>=0.12.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "accelerate>=0.34.0",
]
serve = [
    "vllm>=0.6.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
